# shmem-util

./: Cargo.toml
benches/: queue.rs
examples/: fork-condvar.rs  simple.rs
src/: allocator.rs  autoclean.rs  channel.rs  condvar.rs  fixed_queue.rs  lib.rs  main.rs  memmap.rs  mutex.rs  pagesize.rs  process_rc.rs  shmem_safe.rs  time.rs
src/allocator/: chunks.rs  free_chunk.rs
src/allocator/chunks/: sorted_vec.rs
