[package]
name = "shmem-utils"
version = "0.2.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nix = "0.17.0"
snafu = "0.6.3"
parking_lot = "0.10.0"
alloc-collections = { git = "https://github.com/mexus/alloc-collections", version = "0.3.1", tag = "0.3.1" }
log = "0.4.8"
once_cell = "1.3.1"
lock_api = "0.3.3"

[dev-dependencies]
criterion = "0.3.1"
rand = {version = "0.7.3", features = ["small_rng"]}

[[bench]]
name = "queue"
harness = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.bench]
codegen-units = 1
lto = "thin"